<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgrounColor"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10">

        <SurfaceView
            android:id="@+id/surface"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/imageArea"
            android:layout_width="340dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_10"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/app_name"
                    android:textSize="@dimen/TexSizeTitle"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_margin="@dimen/dimen_10"
                    android:background="@android:color/darker_gray" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bitmap"
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_16" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6">

            <androidx.cardview.widget.CardView
                android:id="@+id/imgGetFromGalleryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="2"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/imageViewHeightWeight"
                        android:layout_height="@dimen/imageViewHeightWeight"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/circleshape"
                        android:padding="@dimen/padding_10"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/ic_gallery_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTop_10"
                        android:text="@string/fromGallery"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_margin="@dimen/margin_10"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/getImageFromGallery"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_title" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/imgTakeFromCameraCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="2"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/imageViewHeightWeight"
                        android:layout_height="@dimen/imageViewHeightWeight"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/circleshape"
                        android:padding="@dimen/padding_10"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/ic_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTop_10"
                        android:text="@string/fromcamera"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_margin="@dimen/margin_10"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_5"
                        android:text="@string/fromCameraDesctription"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_title" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cameraStreamCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="2"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/imageViewHeightWeight"
                        android:layout_height="@dimen/imageViewHeightWeight"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/circleshape"
                        android:padding="@dimen/padding_10"
                        android:tint="@android:color/white"
                        app:srcCompat="@android:drawable/presence_video_busy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTop_10"
                        android:text="@string/fromCameraPreviewStream"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_title"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_1"
                        android:layout_margin="@dimen/margin_10"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_5"
                        android:text="@string/fromCameraStreamDesctription"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_title" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_5"
            android:textAlignment="textStart"
            android:textSize="@dimen/smallTextSize" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>